@@ -2,6 +2,10 @@
 
 	* inst/tinytest/test_client_package.R: Finer-grained skip messages
 	* inst/tinytest/test_module_client_package.R: Idem
+	* inst/tinytest/test_expose_class.R: Idem
+	* inst/tinytest/test_interface.R: Idem
+	* inst/tinytest/test_rcpp_package_skeleton.R: Idem
+	* inst/tinytest/test_reference.R: Idem
 
 	* src/attributes.cpp: Remove dangling '#nocov end'
 
